# ironmem

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_REVIEW_collab_protocol.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.claude-plugin/: README.md  plugin.json
.claude-plugin/commands/: collab.md
.codex-plugin/: README.md  plugin.json
.codex-plugin/prompts/: collab-batch-impl.md  collab.md
.github/workflows/: ci.yml  release.yml
benchmarks/provbench/: SPEC.md
benchmarks/provbench/results/: flask-heldout-2026-05-15-findings.md  flask-heldout-2026-05-18-findings.md  python-labeler-2026-05-15-spotcheck-autofilter.csv  python-labeler-2026-05-15-spotcheck-findings.md  python-labeler-2026-05-15-spotcheck-review.md  python-labeler-2026-05-15-spotcheck.csv  ripgrep-pilot-2026-05-15-v1.2a-findings.md  serde-heldout-2026-05-15-findings.md  (+1 more)
crates/ironmem/: Cargo.toml
crates/ironrace-collab/: Cargo.toml
crates/ironrace-collab/src/: lib.rs  state_machine.rs  types.rs
crates/ironrace-collab/tests/: e2e.rs
crates/ironrace-core/: Cargo.toml
crates/ironrace-embed/: Cargo.toml
crates/ironrace-memory/: Cargo.toml
crates/ironrace-pref-extract/: Cargo.toml
crates/ironrace-rerank/: Cargo.toml
crates/ironrace-rerank/src/: lib.rs  llm_client.rs  scorer.rs
docs/: CODEX.md  COLLAB.md
migrations/: 002_collab.sql  002_fts.sql
scripts/: benchmark_convomem.py  benchmark_locomo.py  benchmark_longmemeval.py  benchmark_membench.py  benchmark_recall.py  benchmark_vs_mempalace.py  check_versions.sh  install-ironmem.sh  mcp_smoke_test.py
(+115 files in other folders)
